[metadata]
name = nuage_tempest
summary = Tempest plugin nuage_tempest_plugin
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    nuage_tempest

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = nuage_tempest/locale
domain = nuage

[update_catalog]
domain = nuage
output_dir = nuage_tempest/locale
input_file = nuage_tempest/locale/nuage_tempest_plugin.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = nuage_tempest/locale/nuage_tempest_plugin.pot

[entry_points]
tempest.test_plugins =
    nuage_tests = nuage_tempest.plugin:NuageTempestPlugin
